--- a/analysis_data.ipynb
+++ b/analysis_data.ipynb
@@ -2,384 +2,344 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from config import config_bi_daf\n",
-    "from preprocess_data import *\n",
-    "import numpy as np\n",
-    "config = config_bi_daf.config"
+    "from modules.layers import loss\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = organize_data(config.train_data)\n",
-    "df = df.sample(5000)\n",
-    "df = deal_data(df)\n",
-    "\n",
-    "# df = pd.read_csv('result/bi_daf_1_val_fake.csv')\n",
-    "# df = df[df['answer_start'] != df['answer_start_pred']]\n",
-    "# df = df[df['answer_end'] != df['answer_end_pred']]\n",
-    "# len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "114\n"
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.6551,  0.6758,  0.4192,  0.5363],\n",
+       "         [ 0.0120,  0.4654,  1.2703,  0.3478],\n",
+       "         [ 0.2069,  1.0654,  1.9221,  0.9858]],\n",
+       "\n",
+       "        [[ 1.3927,  0.1691,  0.9114,  0.3776],\n",
+       "         [ 0.7296,  1.5846,  1.6146,  0.0282],\n",
+       "         [ 1.6747,  0.2322,  0.2562,  0.6870]]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs = torch.randn(2, 3, 4)\n",
+    "outputs = torch.abs(outputs)\n",
+    "outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = [torch.LongTensor([1, 2, 0]), torch.LongTensor([3, 1, 2])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_y = batch[-2]\n",
+    "end_y = batch[-1]\n",
+    "start_pred, end_pred = torch.max(outputs, dim=2)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_tmp = torch.max(start_y, start_pred)\n",
+    "end_tmp = torch.min(end_y, end_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  0, -1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = end_tmp - start_tmp + 1\n",
+    "tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  0,  0])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = torch.max(tmp, tmp.new_zeros(tmp.size()))\n",
+    "tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 1,  1,  1], dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = tmp.eq(0)\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 3,  0,  3])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interval_y = end_y - start_y + 1\n",
+    "interval_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  1, -1])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interval_pred = end_pred - start_pred + 1\n",
+    "interval_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  1,  0], dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask_y = interval_y.eq(0)\n",
+    "mask_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 3,  1,  3])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interval_y.masked_fill_(mask_y, 1)\n",
+    "interval_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 1,  0,  0], dtype=torch.uint8)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask_pred = interval_pred.eq(0)\n",
+    "mask_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 1,  1, -1])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interval_pred.masked_fill_(mask_pred, 1)\n",
+    "interval_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  0,  0])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prec = tmp / interval_pred\n",
+    "prec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  0,  0])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rec = tmp / interval_y\n",
+    "rec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0,  0,  0])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((1 + 1.2**2) * prec * rec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rec' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e41a1b73e1c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mrec\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1.2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mprec\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'rec' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0228"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "answers = df['answer'].values\n",
-    "titles = df['title'].values\n",
-    "print(sum(answers == titles))\n",
-    "sum(answers == titles)/5000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7192857142857143"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('result/bi_daf_1_val_fake.csv')\n",
-    "a = len(df)\n",
-    "df = df[df['answer'] != df['answer_pred']]\n",
-    "b = len(df)\n",
-    "1- b/a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9800"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7217741935483871"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('result/bi_daf_1_val_fake.csv')\n",
-    "df = df[df['answer'] == df['title']]\n",
-    "a = len(df)\n",
-    "df = df[df['answer'] == df['answer_pred']]\n",
-    "b = len(df)\n",
-    "b/a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "248"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0070408163265306125"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(248-179)/9800"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2682"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df[df['answer'] != df['title']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>article_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>content</th>\n",
-       "      <th>merge</th>\n",
-       "      <th>question</th>\n",
-       "      <th>answer</th>\n",
-       "      <th>answer_pred</th>\n",
-       "      <th>answer_start</th>\n",
-       "      <th>answer_end</th>\n",
-       "      <th>answer_start_pred</th>\n",
-       "      <th>answer_end_pred</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6221</th>\n",
-       "      <td>30041</td>\n",
-       "      <td>韩国将接受日本提议 重启军事情报保护协定谈判</td>\n",
-       "      <td>据日本共同社报道，韩国国防部官员本月27日透露称，已决定重启签署可以共享安全领域情报的日韩《...</td>\n",
-       "      <td>韩国将接受日本提议 重启军事情报保护协定谈判。据日本共同社报道，韩国国防部官员本月27日透露...</td>\n",
-       "      <td>韩国为与美国交换军事情报要干嘛</td>\n",
-       "      <td>同日本签署该协定</td>\n",
-       "      <td>也必须同日本签署该协定</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>92</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      article_id                   title  \\\n",
-       "6221       30041  韩国将接受日本提议 重启军事情报保护协定谈判   \n",
-       "\n",
-       "                                                content  \\\n",
-       "6221  据日本共同社报道，韩国国防部官员本月27日透露称，已决定重启签署可以共享安全领域情报的日韩《...   \n",
-       "\n",
-       "                                                  merge         question  \\\n",
-       "6221  韩国将接受日本提议 重启军事情报保护协定谈判。据日本共同社报道，韩国国防部官员本月27日透露...  韩国为与美国交换军事情报要干嘛   \n",
-       "\n",
-       "        answer  answer_pred  answer_start  answer_end  answer_start_pred  \\\n",
-       "6221  同日本签署该协定  也必须同日本签署该协定          94.0        98.0                 92   \n",
-       "\n",
-       "      answer_end_pred  \n",
-       "6221               98  "
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sample()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>article_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>content</th>\n",
-       "      <th>merge</th>\n",
-       "      <th>question</th>\n",
-       "      <th>answer</th>\n",
-       "      <th>answer_pred</th>\n",
-       "      <th>answer_start</th>\n",
-       "      <th>answer_end</th>\n",
-       "      <th>answer_start_pred</th>\n",
-       "      <th>answer_end_pred</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1671</th>\n",
-       "      <td>38895</td>\n",
-       "      <td>俄媒称美国计划向印度免费赠送小鹰号航母</td>\n",
-       "      <td>美国总统布什日前向印度建议，愿意向印免费赠送即将从美海军退役的小鹰号航母。美国向印度赠送小鹰...</td>\n",
-       "      <td>俄媒称美国计划向印度免费赠送小鹰号航母。美国总统布什日前向印度建议，愿意向印免费赠送即将从美...</td>\n",
-       "      <td>孙士海最终是如何认为的</td>\n",
-       "      <td>印度不会把鸡蛋全放到美国的篮子里，中国不用太担心印美走近形成遏制中国的力量</td>\n",
-       "      <td>孙士海认为，印度不会把鸡蛋全放到美国的篮子里，中国不用太担心印美走近形成遏制中国的力量。单纯...</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>51</td>\n",
-       "      <td>122</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      article_id                title  \\\n",
-       "1671       38895  俄媒称美国计划向印度免费赠送小鹰号航母   \n",
-       "\n",
-       "                                                content  \\\n",
-       "1671  美国总统布什日前向印度建议，愿意向印免费赠送即将从美海军退役的小鹰号航母。美国向印度赠送小鹰...   \n",
-       "\n",
-       "                                                  merge     question  \\\n",
-       "1671  俄媒称美国计划向印度免费赠送小鹰号航母。美国总统布什日前向印度建议，愿意向印免费赠送即将从美...  孙士海最终是如何认为的   \n",
-       "\n",
-       "                                     answer  \\\n",
-       "1671  印度不会把鸡蛋全放到美国的篮子里，中国不用太担心印美走近形成遏制中国的力量   \n",
-       "\n",
-       "                                            answer_pred  answer_start  \\\n",
-       "1671  孙士海认为，印度不会把鸡蛋全放到美国的篮子里，中国不用太担心印美走近形成遏制中国的力量。单纯...          54.0   \n",
-       "\n",
-       "      answer_end  answer_start_pred  answer_end_pred  \n",
-       "1671        75.0                 51              122  "
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = df.sample()\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'谁从诺福克海军基地紧急派出一艘遣科尔号驱逐舰（USS Cole），跟踪俄罗斯维克多列昂诺夫号“间谍船”'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.question.values[0]"
+    "(rec + 1.2**2*prec + 1e-6)"
    ]
   },
   {
@@ -389,7 +349,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "score = ((1 + 1.2**2) * prec * rec) / (rec + 1.2**2*prec + 1e-6)\n",
+    "score"
+   ]
   },
   {
    "cell_type": "code",
@@ -398,34 +361,40 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        score.masked_fill_(mask, 0)\n",
+    "        score.masked_fill_(mask_y, 0)\n",
+    "        score.masked_fill_(mask_pred, 0)\n",
+    "\n",
+    "        score = torch.mean(score)\n",
+    "\n",
+    "        # mle\n",
+    "        loss_mle = self.mle(outputs, batch)\n",
+    "\n",
+    "        loss_value = loss_mle + self.lam * score\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
